--- a/style.css
+++ b/style.css
@@ -15,13 +15,13 @@ body{
 /*Seccion de titlos de seleccion de mascota*/
 .titulo {
   color: white;
-  font-size: 40px;
+  font-size: 35px;
   font-family: 'Raleway', sans-serif;
 }
 
 .subtitulo {
   color: white;
-  font-size: 28px;
+  font-size: 24px;
   font-family: 'Raleway', sans-serif;
 }
 
@@ -31,6 +31,11 @@ body{
   gap: 10px;
 }
 
+@media (max-width:360px){
+  .tarjetas{
+    flex-direction: column;
+  }
+}
 .tarjeta-de-mokepon {
   width: 280px;
   height: 150px;
@@ -65,6 +70,7 @@ background-color:#99A3A4;
   font-family: 'Inconsolata', monospace;
   margin-top: 30px;
 }
+
 input {
   display: none;
 }
@@ -89,6 +95,11 @@ input {
   width: 500px;
   gap:20px;
 }
+@media (max-width:360px){
+  .btn-ataques{
+    flex-direction: column;
+    gap: 7px;
+  }
 
 /*Estilos de mensaja de vidas */
 .mensajes-vidas{
@@ -103,6 +114,12 @@ input {
   font-family: 'Inconsolata', monospace; 
   gap: 40px;
 }
+@media (max-width:360px){
+  .mensajes-vidas{
+    flex-direction: column;
+
+  }
+}
 .carta-jugador{
   display: flex;
   align-items: center;
@@ -115,6 +132,7 @@ input {
   border-radius: 15px;
   font-size: 25px;
 }
+
 .carta-enemigo{
   display: flex;
   align-items: center;
@@ -128,7 +146,6 @@ input {
 }
 #mensajes{
   display: grid;
-  
   align-content: center;
   height: auto;
   justify-content: center;
@@ -138,6 +155,12 @@ input {
   font-family: 'Inconsolata', monospace;
 }
 
+@media (max-width:360px){
+  #mensaje{
+    display: flex;
+    flex-direction: column;
+  }
+}
 #boton-reiniciar{
   display: flex;
   flex-direction: column;
@@ -171,6 +194,7 @@ input {
   font-family: 'Inconsolata', monospace;
   font-weight: 600;
 }
+
 .reiniciar{
   display: flex;
   justify-content: center;
