--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Bitter:wght@200&family=Inconsolata&family=Raleway:wght@300&display=swap');
 
+:root {
+  --verde-tarjetas: #73C6B6
+}
+
 p{
   margin: 0;
   padding: 0;
@@ -37,7 +41,7 @@ body {
 .tarjeta-de-mokepon {
   width: 280px;
   height: 150px;
-  background: #73C6B6;
+  background: var(--verde-tarjetas);
   padding: 10px;
   box-sizing: border-box;
   border-radius: 20px;
@@ -76,7 +80,7 @@ input:checked + label {
 }
 
 #seleccionar-ataque {
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
   
@@ -104,6 +108,11 @@ input:checked + label {
   cursor:pointer;
 }
 
+.boton-ataques:disabled {
+  filter: blur(2px);
+  cursor: not-allowed;
+}
+
 #mensajes {
   display: flex;
   justify-content: center;
@@ -127,10 +136,11 @@ input:checked + label {
   font-size: 18px;
   font-family: 'Inconsolata', monospace;
   margin-top: 30px;
+  cursor: pointer;
 }
 
 #reiniciar{
-  display: flex;
+  display: none;
   justify-content: center;
 }
 
@@ -140,30 +150,21 @@ input:checked + label {
   margin-bottom: 0;
 }
 
-.carta-jugador{
+.carta-jugador, .carta-enemigo{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: 20px 20px 10px 0;
   width: 100%;
-  height: 130px;
+  min-height: 130px;
   background-color:#73c6b6 ;
   border-radius: 15px;
   gap: 10px;
 }
 
 .carta-enemigo{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 20px 20px 10px 0;
-  width: 100%;
-  height: 130px;
   background-color:#e6b0aa ;
-  border-radius: 15px;
-  gap: 10px;
 }
 
 
