--- a/style.css
+++ b/style.css
@@ -1,16 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Bitter:wght@200&family=Inconsolata&family=Raleway:wght@300&display=swap');
 
 :root {
-  --verde-tarjetas: #73C6B6
+  --verde-tarjetas: #73C6B6;
+  --azul-background:#2E405F;
+  --white-textos:white;
+  --gris-botones:#95A5A6;
+  --gris-seleccion-boton:#99a3a4;
+  --degradado:linear-gradient(#e6b0aa,#73c6b6);
+  --tarjeta-enemigo:#e6b0aa;
+  --tarjeta-jugador:#73c6b6;
 }
 
 p{
+  text-align: center;
   margin: 0;
   padding: 0;
 }
 
 body {
-  background-color: #2E405F;
+  background-color: var(--azul-background);
 }
 
 #seleccionar-mascota {
@@ -22,13 +30,13 @@ body {
 }
 
 .titulo {
-  color: white;
+  color: var(--white-textos);
   font-size: 35px;
   font-family: 'Raleway', sans-serif
 }
 
 .subtitulo {
-  color: white;
+  color: var(--white-textos);
   font-size: 24px;
   font-family: 'Raleway', sans-serif
 }
@@ -48,7 +56,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
+  color: var(--white-textos);
   font-size: 19px;
   cursor:pointer ;
 }
@@ -62,9 +70,9 @@ body {
   width: 180px;
   height: 40px;
   border-radius: 20px;
-  background: #95A5A6  ;
+  background: var(--gris-botones);
   border: 2px solid white;
-  color: white;
+  color: var(--white-textos);
   font-size: 18px;
   font-family: 'Inconsolata', monospace;
   margin-top: 30px;
@@ -76,7 +84,7 @@ input {
 }
 
 input:checked + label {
-  background-color: #99a3a4;
+  background-color: var(--gris-seleccion-boton);
 }
 
 #seleccionar-ataque {
@@ -96,7 +104,7 @@ input:checked + label {
 }
 
 .boton-ataques {
-  background-color: #99a3a4;
+  background-color: var(--gris-seleccion-boton);
   padding: 10px;
   box-sizing: border-box;
   border-radius: 20px;
@@ -120,7 +128,7 @@ input:checked + label {
   width: 300px;
   color: white;
   font-size: 30px;
-  background: linear-gradient(#e6b0aa,#73c6b6);
+  background: var(--degradado);
   padding: 20px;
   margin-top: 20px;
   border-radius: 20px;
@@ -158,20 +166,29 @@ input:checked + label {
   margin: 20px 20px 10px 0;
   width: 100%;
   min-height: 130px;
-  background-color:#73c6b6 ;
+  background-color:var(--tarjeta-jugador) ;
   border-radius: 15px;
   gap: 10px;
+  padding: 10px 0;
 }
 
 .carta-enemigo{
-  background-color:#e6b0aa ;
+  background-color:var(--tarjeta-enemigo) ;
 }
 
 
 @media (max-width: 360px) {
+    
+    .titulo{
+      font-size:30px ;
+    }
+    .subtitulo{
+      font-size:26px ;
+    }
+
     .tarjeta-de-mokepon{
-      width: 240px;
-      height: 120px;
+      width: 200px;
+      height: 100px;
     }
 
     .boton-ataques{
@@ -179,6 +196,7 @@ input:checked + label {
       flex-direction: column;
       align-items: center;
       margin: 13px 0;
+      font-size: 15px;
     }
 
   #mensajes{
@@ -188,10 +206,12 @@ input:checked + label {
 
   .tarjetas, .tarjetas-ataques {
     flex-direction: column;
+    
   }
 
   .ataques{
-    width: 85%;
+    width: 80%;
+    font-size:15px;
   }
 
 }
